--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <script src="js/bootstrap.min.js" crossorigin="anonymous"></script>
   <!-- CSS styling -->
   <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css">
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:900i" rel="stylesheet">
   <title>Jordynn Otto</title>
 </head>
 
@@ -58,118 +61,119 @@
   </div>
 
   <!-- about me -->
-  <div class="container" id="about">
+  <div id="about">
     <h2 id="title">
-      About:
+      About
     </h2>
+    <hr>
+    <!-- bio -->
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-12">
         <p>
-          Jordynn is a passionate woman who thrives off of new knowledge and seeks to be
-          successful in all aspects of life. Growing up competitively dancing, she learned how to manage stress, time,
-          and work at a young age. This work ethic took her to Loyola Marymount University in Los Angeles, where she
-          graduated Cum Laude with a BA in dance and minor in business administration.
+          I am a passionate woman who thrives off of new knowledge and seeks to be successful in all aspects of life. Growing up competitively dancing, I learned how to manage stress, time, and work at a young age. This work ethic took me to Loyola Marymount University in Los Angeles, where I graduated Cum Laude with a BA in dance and minor in business administration.
         </p>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-12">
         <p>
-          Post graduation, she focused on pursing dance, fitness and photogrpahy in Los Angeles until she found herself
-          stagnant and not challenged mentally. Jordynn moved home to Seattle, WA to further her skills and pursue a
-          different career - web development! Currently, she teaches a fitness class, choreograph for dance studios,
-          manage a social media account for a dance photography company, and is enrolled in a coding bootcamp.
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-12">
-        <p>
-          Her experience in the arts marries the coding tools I have learned giving me the
-          perfect amount of cre)tivity in web development. I am sure I will bring a new,
-          fresh mind to the work place and look forward to always facing and fighting
-          challenges.
+          Post graduation, I focused on pursing dance, fitness and photography in Los Angeles until I found myself
+          stagnant and not challenged mentally. I moved home to Seattle, WA to further my skills and pursue a
+          different career - web development! My experience in the arts marries the coding tools I have learned which gives me ample creativity in web development. I am confident in bringing a new, fresh mind to coding whether it is in the work place or personal clients.
         </p>
       </div>
     </div>
   </div>
 
   <!-- web portfolio/skills -->
-  <div class="container" id="webPage">
+  <div id="webPage">
     <h2 id="title">
-      Web Portfolio:
+      Web Portfolio
     </h2>
+    <hr>
+    <!-- projects -->
     <div class="cards">
-      <!-- projects -->
       <div class="card-deck">
+
         <div class="card">
           <a href="https://buley004.github.io/ballads-and-brews/">
             <img class="card-img-top" src="images/Screen Shot 2019-04-23 at 2.30.51 PM.png" alt="Image of App">
           </a>
-          <div class="card-body">
-            <h5 class="card-title">Ballads and Brews</h5>
-            <p class="card-text">App designed to populate concerts and restaurants near you TONIGHT!</p>
-            <a href="https://github.com/buley004/ballads-and-brews" class="btn btn-primary" id="cardbutton">Github</a>
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Ballads and Brews</h5>
+              <p class="card-text">App designed to populate concerts and restaurants near you TONIGHT!</p>
+              <a href="https://github.com/buley004/ballads-and-brews" class="btn btn-primary" id="cardbutton">Github</a>
+            </div>
           </div>
         </div>
+
         <div class="card">
-          <a href="https://buley004.github.io/ballads-and-brews/">
-            <img class="card-img-top" src="images/Screen Shot 2019-04-23 at 2.30.51 PM.png" alt="Image of App">
+          <a href="https://jottobot.github.io/unit-4-game/">
+            <img class="card-img-top" src="images/Screen Shot 2019-04-23 at 11.23.12 PM.png" alt="Image of Game">
+          </a>
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Crystal Collector</h5>
+              <p class="card-text">Number guessing game; you versus computer.</p>
+              <a href="https://github.com/jottobot/unit-4-game" class="btn btn-primary" id="cardbutton">Github</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <a href="https://jottobot.github.io/Giphy/">
+            <img class="card-img-top" src="images/Screen Shot 2019-04-23 at 11.20.22 PM.png" alt="Image of App">
           </a>
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <div class="card text-center">
+              <h5 class="card-title">Gif Generator</h5>
+              <p class="card-text">Musically themed Gif generator using giphy API.</p>
+              <a href="https://github.com/jottobot/Giphy" class="btn btn-primary" id="cardbutton">Github</a>
+            </div>
           </div>
         </div>
-        <div class="card">
-          <a href="https://buley004.github.io/ballads-and-brews/">
-            <img class="card-img-top" src="images/Screen Shot 2019-04-23 at 2.30.51 PM.png" alt="Image of App">
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-        </div>
+
       </div>
     </div>
 
+    <!-- skills in cards -->
     <h3 id="skills">
-      Skills:
+      Skills
     </h3>
     <div class="card-deck">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card text-center" style="width: 10rem;">
+        <img class="card-img-top" src="images/f56ed6ae6dca9cd87d8393ab747008ad.jpeg" alt="HTML logo">
         <div class="card-body">
           <p class="card-text">HTML</p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card text-center" style="width: 10rem;">
+        <img class="card-img-top" src="images/9e5f008ae06ac4029c2f39ee26eebc88.jpeg" alt="CSS logo">
         <div class="card-body">
           <p class="card-text">CSS</p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card text-center" style="width: 10rem;">
+        <img class="card-img-top" src="images/27f3ec7c30eddf031c34c50aeba299a8.png" alt="JS logo">
         <div class="card-body">
           <p class="card-text">Javascript</p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card text-center" style="width: 10rem;">
+        <img class="card-img-top" src="images/29dabf8362ee82c5a7a935607d99fece.jpeg" alt="jQuery logo">
         <div class="card-body">
           <p class="card-text">jQuery</p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card text-center" style="width: 10rem;">
+        <img class="card-img-top" src="images/82dc34f0e6bc1593fdd41b6515314298.jpeg" alt="API logo">
         <div class="card-body">
           <p class="card-text">API documentation</p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card text-center" style="width: 10rem;">
+        <img class="card-img-top" src="images/b3dc8105c42a3358849fe48e8b332019.png" alt="Node logo">
         <div class="card-body">
           <p class="card-text">Node JS</p>
         </div>
@@ -178,87 +182,137 @@
   </div>
 
   <!-- art portfolio -->
-  <div class="container" id="artPage">
+  <div id="artPage">
     <h2 id="title">
-      Art Portfolio:
+      Art Portfolio
     </h2>
+    <hr>
+    <!-- carousel of modeling/photography -->
     <h4 id="photo">
-      Photography:
+      Photography
     </h4>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/Screen Shot 2019-04-23 at 2.30.51 PM.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <p>Shot for Hollywood Dance Shoot.</p>
-              </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/Rain032.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <p>Shot for Hollywood Dance Shoot.</p>
-              </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/IMG_9230.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <p>Shot for Hollywood Dance Shoot.</p>
-              </div>
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/JULIET 5.jpg" class="d-block w-100" alt="Image of Jordynn's photography.">
+          <div class="carousel-caption d-none d-md-block">
+            <p>Photographed for Hollywood Dance Shoot &copy.</p>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+          <img src="images/NYCDAORL18209_BRADY_FARRAR-028_edit.jpg" class="d-block w-100"
+            alt="Image of Jordynn's photography.">
+          <div class="carousel-caption d-none d-md-block">
+            <p id="carouseltext">Photographed for Hollywood Dance Shoot &copy.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/CDC17102_GRACE_RATTERREE-107_edit.jpg" class="d-block w-100"
+            alt="Image of Jordynn's photography.">
+          <div class="carousel-caption d-none d-md-block">
+            <p id="carouseltext">Photographed for Hollywood Dance Shoot &copy.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/Screen Shot 2018-10-18 at 5.02.18 PM.png" class="d-block w-100"
+            alt="Image of Jordynn's modeling.">
+          <div class="carousel-caption d-none d-md-block">
+            <p>Modeled for Dakota Elizabeth &copy.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/Screen Shot 2018-08-29 at 2.58.28 PMedit.jpg" class="d-block w-100"
+            alt="Image of Jordynn's modeling.">
+          <div class="carousel-caption d-none d-md-block">
+            <p id="carouseltext">Modeled for The Dance Photography Workshop &copy.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/IMG_7895.JPG" class="d-block w-100" alt="Image of Jordynn's modeling.">
+          <div class="carousel-caption d-none d-md-block">
+            <p>Modeled for Hollywood Dance Shoot &copy.</p>
+          </div>
+        </div>
       </div>
-
-    <h4 id="dance">
-      Choreography/Dance:
-    </h4>
-
-    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=Q8Oez3MPE54">
-    </iframe>
-    <p>Danced and choregoraphed by Jordynn Otto</p>
-
-    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=BRoeecMjRXY">
-    </iframe>
-    <p>Danced and choregoraphed by Jordynn Otto</p>
-
-    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=MVQQVFKF5I0&list=PLIX6p9XONeX3maaGHK2l4jdaVTl74MbnM&index=5&t=69s">
-    </iframe>
-    <p>Choreographed by Jordynn Otto, danced by Trilogy Dance Company.</p>
-    
-    <!-- contact page -->
-    <div class="container" id="contactPage">
-      <h2 id="title">
-        Contact:
-      </h2>
-
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- youtube videos -->
+    <h4 id="dance">
+      Choreography/Dance
+    </h4>
+    <div class="youtube">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>Danced and choreographed by Jordynn Otto</p>
 
-    <!-- javascript -->
-    <script src="assets/app.js"></script>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/BRoeecMjRXY" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>Danced and choreographed by Jordynn Otto</p>
 
-    <!-- bootstrap js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/MVQQVFKF5I0" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>Choreographed by Jordynn Otto, danced by Trilogy Dance Company.</p>
+    </div>
+  </div>
+
+  <!-- contact page -->
+  <div id="contactPage">
+    <h2 id="title">
+      Contact
+    </h2>
+    <hr>
+    <p id="contactInfo">
+      Call me: 206-909-5153<br>
+      Write me: j_taylor92@yahoo.com <br>
+      Stalk me: <a href="https://www.instagram.com/jottobot/" id="contactlink"> @jottobot</a><br>
+    </p>
+    <p id="contactInfo">
+      Linkedin: <a
+        href="https://www.linkedin.com/in/jordynn-otto-861918173?trk=people-guest_profile-result-card_result-card_full-click" id="contactlink">
+        https://www.linkedin.com/jordynn-otto</a><br>
+      Github: <a href="https://github.com/jottobot" id="contactlink">https://github.com/jottobot</a><br>
+      Resume: 
+    </p>   
+  </div>
+
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- javascript -->
+  <script src="assets/app.js"></script>
+
+  <!-- bootstrap js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
 </body>
+
+<!-- Footer -->
+<footer class="page-footer">
+    <div class="footer-copyright text-center py-3">
+      © 2019 Copyright: Jordynn Otto.
+    </div>
+  </footer>
+
 
 </html>
