--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 
         <div class="card">
           <a href="https://buley004.github.io/ballads-and-brews/">
-            <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of App">
+            <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of App">
           </a>
           <div class="card text-center">
             <div class="card-body">
               <h5 class="card-title">Ballads and Brews</h5>
-              <p class="card-text">This app populates concerts and restaurants near you TONIGHT!</p>
+              <p class="card-text">App populates concerts and restaurants near you NOW!</p>
               <a href="https://github.com/buley004/ballads-and-brews" class="btn btn-primary" id="cardbutton">Github</a>
             </div>
           </div>
@@ -112,7 +112,7 @@
 
         <div class="card">
           <a href="https://jottobot.github.io/Crystal-Collector/">
-            <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.38.49 PM.png" alt="Image of Game">
+            <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.38.49 PM.png" alt="Image of Game">
           </a>
           <div class="card text-center">
             <div class="card-body">
@@ -125,7 +125,7 @@
 
         <div class="card">
           <a href="https://jottobot.github.io/Giphy/">
-            <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.50.20 PM.png" alt="Image of App">
+            <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.50.20 PM.png" alt="Image of App">
           </a>
           <div class="card text-center">
             <div class="card-body">
