--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <hr>
     <!-- bio -->
     <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-12">
+      <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
         <p id="summary">
           I am a passionate woman who thrives off of new knowledge and seeks to be successful in all aspects of life.
           Growing up competitively dancing, I learned how to manage stress, time, and work at a young age. This work
@@ -73,9 +73,9 @@
           and minor in business administration.
         </p>
       </div>
-    </div>
+    <!-- </div> -->
     <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-12">
+      <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
         <p id="summary">
           Post graduation, I focused on pursing dance, fitness and photography in Los Angeles until I found myself
           stagnant and not challenged mentally. I moved home to Seattle, WA to further my skills and venture into a
@@ -84,7 +84,7 @@
           it is in the work place or for personal clients.
         </p>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
 
   <!-- web portfolio/skills -->
@@ -99,7 +99,8 @@
 
         <div class="card">
           <a href="https://buley004.github.io/ballads-and-brews/">
-            <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of App">
+            <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png"
+              alt="Image of App">
           </a>
           <div class="card text-center">
             <div class="card-body">
@@ -112,7 +113,8 @@
 
         <div class="card">
           <a href="https://jottobot.github.io/Crystal-Collector/">
-            <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.38.49 PM.png" alt="Image of Game">
+            <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.38.49 PM.png"
+              alt="Image of Game">
           </a>
           <div class="card text-center">
             <div class="card-body">
@@ -124,14 +126,15 @@
         </div>
 
         <div class="card">
-          <a href="https://jottobot.github.io/Giphy/">
-            <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.50.20 PM.png" alt="Image of App">
+          <a href="">
+            <img class="card-img-top" id="card-img-topp" src="images/Screen Shot 2019-05-02 at 6.59.50 PM.png"
+              alt="Image of App">
           </a>
           <div class="card text-center">
             <div class="card-body">
-              <h5 class="card-title">Musical Gifs</h5>
-              <p class="card-text">Find gifs of your favorite musical artist.</p>
-              <a href="https://github.com/jottobot/Giphy" class="btn btn-primary" id="cardbutton">Github</a>
+              <h5 class="card-title">Liri Bot</h5>
+              <p class="card-text">Command line node app that takes in parameters and gives back data.</p>
+              <a href="https://github.com/jottobot/liri-node-app" class="btn btn-primary" id="cardbutton">Github</a>
             </div>
           </div>
         </div>
@@ -193,74 +196,96 @@
     <h4 id="photo">
       Photography
     </h4>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"
-      style="width: 500px; margin: 0 auto; margin-bottom: 50px">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="images/JULIET 5.jpg" class="d-block w-100" alt="Image of Jordynn's photography.">
-          <div class="carousel-caption d-none d-md-block">
-            <p>Photographed for Hollywood Dance Shoot &copy.</p>
+    <div class="row">
+      <div class="col-sm-12 col-md-12 col-lg-12">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"
+          style="width: 500px; margin: 0 auto; margin-bottom: 50px">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/JULIET 5.jpg" class="d-block w-100" alt="Image of Jordynn's photography.">
+              <div class="carousel-caption d-none d-md-block">
+                <p>Photographed for Hollywood Dance Shoot &copy.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/NYCDAORL18209_BRADY_FARRAR-028_edit.jpg" class="d-block w-100"
+                alt="Image of Jordynn's photography.">
+              <div class="carousel-caption d-none d-md-block">
+                <p id="carouseltext">Photographed for Hollywood Dance Shoot &copy.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/CDC17102_GRACE_RATTERREE-107_edit.jpg" class="d-block w-100"
+                alt="Image of Jordynn's photography.">
+              <div class="carousel-caption d-none d-md-block">
+                <p id="carouseltext">Photographed for Hollywood Dance Shoot &copy.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/Screen Shot 2018-10-18 at 5.02.18 PM.png" class="d-block w-100"
+                alt="Image of Jordynn's modeling.">
+              <div class="carousel-caption d-none d-md-block">
+                <p>Modeled for Dakota Elizabeth &copy.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/Screen Shot 2018-08-29 at 2.58.28 PMedit.jpg" class="d-block w-100"
+                alt="Image of Jordynn's modeling.">
+              <div class="carousel-caption d-none d-md-block">
+                <p id="carouseltext">Modeled for The Dance Photography Workshop &copy.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/IMG_7895.JPG" class="d-block w-100" alt="Image of Jordynn's modeling.">
+              <div class="carousel-caption d-none d-md-block">
+                <p>Modeled for Hollywood Dance Shoot &copy.</p>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/NYCDAORL18209_BRADY_FARRAR-028_edit.jpg" class="d-block w-100"
-            alt="Image of Jordynn's photography.">
-          <div class="carousel-caption d-none d-md-block">
-            <p id="carouseltext">Photographed for Hollywood Dance Shoot &copy.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/CDC17102_GRACE_RATTERREE-107_edit.jpg" class="d-block w-100"
-            alt="Image of Jordynn's photography.">
-          <div class="carousel-caption d-none d-md-block">
-            <p id="carouseltext">Photographed for Hollywood Dance Shoot &copy.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/Screen Shot 2018-10-18 at 5.02.18 PM.png" class="d-block w-100"
-            alt="Image of Jordynn's modeling.">
-          <div class="carousel-caption d-none d-md-block">
-            <p>Modeled for Dakota Elizabeth &copy.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/Screen Shot 2018-08-29 at 2.58.28 PMedit.jpg" class="d-block w-100"
-            alt="Image of Jordynn's modeling.">
-          <div class="carousel-caption d-none d-md-block">
-            <p id="carouseltext">Modeled for The Dance Photography Workshop &copy.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/IMG_7895.JPG" class="d-block w-100" alt="Image of Jordynn's modeling.">
-          <div class="carousel-caption d-none d-md-block">
-            <p>Modeled for Hollywood Dance Shoot &copy.</p>
-          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
 
     <!-- youtube videos -->
     <h4 id="dance">
       Choreography/Dance
     </h4>
-    <div class="youtube" style="margin: 0 auto">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
+
+    <div class="video-container">
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <p id="youtubetext">Danced and choreographed by Jordynn Otto.</p>
+
+    <div class="video-container">
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/BRoeecMjRXY" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <p id="youtubetext">Danced and choreographed by Jordynn Otto.</p>
+
+    <div class="video-container">
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/MVQQVFKF5I0" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <p id="youtubetext">Choreographed by Jordynn Otto, danced by Trilogy Dance Company.</p>
+
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p id="youtubetext">Danced and choreographed by Jordynn Otto.</p>
 
@@ -270,45 +295,48 @@
 
       <iframe width="560" height="315" src="https://www.youtube.com/embed/MVQQVFKF5I0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p id="youtubetext">Choreographed by Jordynn Otto, danced by Trilogy Dance Company.</p>
+      <p id="youtubetext">Choreographed by Jordynn Otto, danced by Trilogy Dance Company.</p> -->
+
+
+    <!-- contact page -->
+    <div class="row">
+      <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
+        <div id="contactPage">
+          <h2 id="title">
+            Contact
+          </h2>
+          <hr>
+          <p id="contacttitle">Call me:</p>
+          <p id="contactInfo">206-909-5153</p><br>
+          <p id="contacttitle">Write me:</p>
+          <p id="contactInfo">j_taylor92@yahoo.com</p><br>
+          <p id="contacttitle">Stalk me:</p>
+          <p id="contactInfo"><a href="https://www.instagram.com/jottobot/" id="contactlink"> @jottobot</a></p><br>
+          <p id="contactInfo">
+            Linkedin: <a
+              href="https://www.linkedin.com/in/jordynn-otto-861918173?trk=people-guest_profile-result-card_result-card_full-click"
+              id="contactlink">
+              https://www.linkedin.com/jordynn-otto</a><br>
+            Github: <a href="https://github.com/jottobot" id="contactlink">https://github.com/jottobot</a><br>
+            Resume: <a href="assets/Jordynn Otto Resume.pdf" id="contactlink">Download resume</a>
+          </p>
+        </div>
+      <!-- </div> -->
     </div>
-  </div>
 
-  <!-- contact page -->
-  <div id="contactPage">
-    <h2 id="title">
-      Contact
-    </h2>
-    <hr>
-    <p id="contacttitle">Call me:</p>
-    <p id="contactInfo">206-909-5153</p><br>
-    <p id="contacttitle">Write me:</p>
-    <p id="contactInfo">j_taylor92@yahoo.com</p><br>
-    <p id="contacttitle">Stalk me:</p>
-    <p id="contactInfo"><a href="https://www.instagram.com/jottobot/" id="contactlink"> @jottobot</a></p><br>
-    <p id="contactInfo">
-      Linkedin: <a
-        href="https://www.linkedin.com/in/jordynn-otto-861918173?trk=people-guest_profile-result-card_result-card_full-click"
-        id="contactlink">
-        https://www.linkedin.com/jordynn-otto</a><br>
-      Github: <a href="https://github.com/jottobot" id="contactlink">https://github.com/jottobot</a><br>
-      Resume: <a href="assets/Jordynn Otto Resume.pdf" id="contactlink">Download resume</a>
-    </p>
-  </div>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-  <!-- jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- javascript -->
+    <script src="assets/app.js"></script>
 
-  <!-- javascript -->
-  <script src="assets/app.js"></script>
-
-  <!-- bootstrap js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    <!-- bootstrap js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
 
 </body>
 
