--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p id="summary">
           Hi, I am Jordynn, a full-stack web developer. I am a woman of passion who thrives off of new knowledge and
           seeks to be successful in all aspects of life. Due to my background in arts, fitness, and communications my
-          talents and skills cover a myriad of categories which marries front-end development eloquently. Exceling at
+          talents and skills cover a myriad of categories; which marries front-end development eloquently. Exceling at
           front-end UI, meshing colors, themes, and design, I am confident in bringing a new, fresh perspective to
           application interface.
         </p>
@@ -131,30 +131,41 @@
         Skills
       </h3>
 
-      <p>HTML</p>
-      <div class="container">
-        <div class="skills html">90%</div>
+      <div class="row">
+        <div class="col-md-4">
+          <i class="fa fa-html5" style="font-size:55px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">HTML</p>
+        </div>
+
+        <div class="col-md-4">
+          <i class="fa fa-css3" style="font-size:55px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">CSS</p>
+        </div>
+
+        <div class="col-md-4">
+          <i class="fa fa-css3" style="font-size:55px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">jQuery</p>
+        </div>
       </div>
 
-      <p>CSS</p>
-      <div class="container">
-        <div class="skills css">90%</div>
+      <div class="row">
+        <div class="col-md-4">
+          <i class="fa fa-css3" style="font-size:55px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">mySQL</p>
+        </div>
+
+        <div class="col-md-4">
+          <i class="fa fa-camera" style="font-size:55px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">Photoshop</p>
+        </div>
+
       </div>
 
-      <p>mySQL</p>
-      <div class="container">
-        <div class="skills mysql">70%</div>
-      </div>
-
-      <p>JavaScript</p>
-      <div class="container">
-        <div class="skills js">60%</div>
-      </div>
-
-      <p>node JS</p>
-      <div class="container">
-        <div class="skills node">60%</div>
-      </div>
 
     <!-- end of web portfolio div -->
     </div>
@@ -232,28 +243,37 @@
       <h5 class="contact">I would love to hear from you.</h4>
 
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-6">
           <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
           <br>
           <p class="contacttext">206-909-5153</p>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-6">
           <i class="fa fa-envelope" style="font-size:48px" id="contacticon"></i>
           <br>
           <p class="contacttext">jordynn.otto@gmail.com</p>
         </div>
+      </div>
 
-        <div class="col-md-3">
+
+      <div class="row" id="row1">
+        <div class="col-md-4">
             <i class="fa fa-linkedin-square" style="font-size:48px" id="contacticon"></i>
           <br>
           <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink">Linkedin</a>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-4">
             <i class="fa fa-github" style="font-size:48px" id="contacticon"></i>
           <br>
           <a href="https://github.com/jottobot" id="contactlink">Github</a>
+        </div>
+
+        <div class="col-md-4">
+          <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
+        <br>
+        <a href="assets/Jordynn Otto Resume.pdf" id="contactlink">Resume</a>
         </div>
       </div>
 
