--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
       <div class="cards">
         <div class="card-deck">
 
+
+            <!-- <div class="w3-display-container w3-hover-opacity">
+                <img src="img_avatar.png" alt="Avatar">
+                <div class="w3-display-middle w3-display-hover">
+                  <button class="w3-button w3-black">John Doe</button>
+                </div>
+              </div -->
+
           <div class="card">
             <a href="https://buley004.github.io/ballads-and-brews/">
               <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png"
